--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,5 +106,12 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_my_meds">MyMeds</string>
+
+    <string name="alerts">Alerts</string>
+    <string name="news">News</string>
+
+
+
+
     <string name="element_text">Element</string>
 </resources>
