--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,7 +106,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="title_activity_my_meds">MyMeds</string>
+    <string name="title_activity_my_meds">My Meds</string>
 
 
 
@@ -118,6 +118,8 @@
 
 
     <string name="news">News</string>
+    <string name="submit">Submit</string>
+
 
 
     <string name="element_text">Element</string>
