--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,18 +109,16 @@
     <string name="title_activity_my_meds">My Meds</string>
 
 
-
-
     <string name="alerts">Alerts</string>
     <string name="editList"> Edit Your Meds List </string>
     <string name="foodRecallTitle">Current Food Recalls </string>
-
+    <string name="ifDrugRecall"> <u><i>Drug Recall? Next Steps to take</i></u> </string>
 
 
     <string name="news">News</string>
     <string name="submit">Submit</string>
 
 
-
     <string name="element_text">Element</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
