--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,8 @@
     <string name="title_activity_my_meds">My Meds</string>
 
 
+    <string name="add_med_message">Addition successful!</string>
+
     <string name="alerts">Alerts</string>
     <string name="editList"> Edit Your Meds List </string>
     <string name="foodRecallTitle">Current Food Recalls </string>
