--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,7 @@
     <string name="alerts">Alerts</string>
     <string name="editList"> Edit Your Meds List </string>
     <string name="foodRecallTitle">Current Food Recalls </string>
-    <string name="ifDrugRecall"> <u><i>Drug Recall? Next Steps to take</i></u> </string>
+    <string name="ifDrugRecall"> <i>Drug Recall? Next Steps to take</i></string>
     <string name="drugRecallInfo">
 
 
